--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
+    "name": "express-portal",
+    "version": "1.0.0",
+    "description": "for express portal",
+    "main": "index.js",
+    "scripts": {
+        "start": "nodemon index.js"
+    },
+    "author": "",
+    "license": "ISC",
     "dependencies": {
         "argon2": "^0.43.1",
         "body-parser": "^2.2.0",
         "cookie-parser": "^1.4.7",
         "dotenv": "^17.2.0",
+        "ejs": "^3.1.10",
         "express": "^5.1.0",
         "express-mysql-session": "^3.0.3",
         "express-session": "^1.18.1",
         "google-auth-library": "^10.1.0",
         "google-spreadsheet": "^4.1.5",
         "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
         "mysql2": "^3.14.2",
         "nodemon": "^3.1.10",
         "prettier": "^3.6.2"
-    },
-    "scripts": {
-        "start": "nodemon index.js"
     }
 }
