--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "license": "ISC",
     "dependencies": {
         "argon2": "^0.43.1",
+        "axios": "^1.11.0",
         "body-parser": "^2.2.0",
         "cookie-parser": "^1.4.7",
         "dotenv": "^17.2.0",
