--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "multer": "^1.4.5-lts.1",
         "multer-s3": "^3.0.1",
         "mysql2": "^3.14.2",
+        "nodemailer": "^7.0.5",
         "nodemon": "^3.1.10",
         "prettier": "^3.6.2",
         "randomstring": "^1.3.1"
