--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
 node_modules
 .env
+.env.test
+.env.
 package-lock.json
 # Logs
 app.log
 static.log
+#MD
+*.md
+#playwright-report
+playwright-report/
+#test-results
+test-results/
