--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "for express portal",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon index.js"
+        "start": "nodemon index.js",
+        "test": "jest",
+        "test:e2e": "playwright test"
     },
     "author": "",
     "license": "ISC",
@@ -30,5 +32,11 @@
         "nodemon": "^3.1.10",
         "prettier": "^3.6.2",
         "randomstring": "^1.3.1"
+    },
+    "devDependencies": {
+        "@playwright/test": "^1.55.0",
+        "jest": "^30.1.1",
+        "playwright": "^1.55.0",
+        "supertest": "^7.1.4"
     }
 }
