--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,8 @@ jobs:
       mysql:
         image: mysql:8.0
         env:
-          MYSQL_ROOT_PASSWORD: root
+          MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          MYSQL_ROOT_PASSWORD: ""
           MYSQL_DATABASE: 33labs_portal_test
         ports:
           - 3306:3306
@@ -37,7 +38,7 @@ jobs:
           NODE_ENV: test
           TEST_DB_HOST: 127.0.0.1
           TEST_DB_USER: root
-          TEST_DB_PASS: root
+          TEST_DB_PASS: ""
           TEST_DB_NAME: 33labs_portal_test
           AWS_REGION: ${{ secrets.AWS_REGION }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -53,7 +54,7 @@ jobs:
           NODE_ENV: test
           TEST_DB_HOST: 127.0.0.1
           TEST_DB_USER: root
-          TEST_DB_PASS: root
+          TEST_DB_PASS: ""
           TEST_DB_NAME: 33labs_portal_test
           PORT: 3000
           AWS_REGION: ${{ secrets.AWS_REGION }}
@@ -62,15 +63,16 @@ jobs:
           S3_BUCKET_NAME: test-bucket
           
       - name: Wait for server to start
-        run: sleep 5
+        run: sleep 10
         
       - name: Run Playwright tests
         run: npm run test:e2e
+        timeout-minutes: 15
         env:
           NODE_ENV: test
           TEST_DB_HOST: 127.0.0.1
           TEST_DB_USER: root
-          TEST_DB_PASS: root
+          TEST_DB_PASS: ""  
           TEST_DB_NAME: 33labs_portal_test
           
       - name: Upload Playwright report
