--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@ name: Tests
 
 on:
   push:
-    branches: [ main, develop, test ]
+    branches: [ main]
   pull_request:
-    branches: [ main, develop, test ]
+    branches: [ main]
 
 jobs:
   test:
